// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderProperties > Should render properties, case id selector 1`] = `
"
  document.querySelector('div').object={};
document.querySelector('div').array=[]"
`;

exports[`renderProperties > Should render properties, case id selector 2`] = `
"
  document.querySelector('div').object={};
document.querySelector('div').array=[];
document.querySelector('div').fn=() => {\\n  }"
`;

exports[`utils > renderProperties > Should render properties, case id selector 1`] = `
"
  document.querySelector('div').object={};
document.querySelector('div').array=[]"
`;

exports[`utils > renderProperties > Should render properties, case id selector 2`] = `
"
  document.querySelector('div').object={};
document.querySelector('div').array=[];
document.querySelector('div').fn=() => {\\n    }"
`;
